metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/workspan__AqTestObject__c.object-meta.xml
<CustomObject>
    <description>This object exists only to provide test coverage for common trigger methods. It should only be populated in tests and never contain data in production.</description>
    <label>WorkSpan Test Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkSpan Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>