metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressCity__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressCity__c</fullName>
    <label>Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>