metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressCountry__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressCountry__c</fullName>
    <label>Address Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>