metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressCountryCode__c</fullName>
    <label>AddressCountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>