metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressPostalCode__c</fullName>
    <label>Address Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>