metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressState__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressState__c</fullName>
    <label>Address State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>