metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressStateCode__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressStateCode__c</fullName>
    <label>Address State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>