metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>workspan__AddressStreet__c</fullName>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>