metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Checkbox__c.field-meta.xml
<CustomField>
    <fullName>workspan__Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test Checkbox field.</description>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>