metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Currency__c.field-meta.xml
<CustomField>
    <fullName>workspan__Currency__c</fullName>
    <description>Test Currency field</description>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>