metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Date__c.field-meta.xml
<CustomField>
    <fullName>workspan__Date__c</fullName>
    <description>Test Date field.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>