metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__DateTime__c.field-meta.xml
<CustomField>
    <fullName>workspan__DateTime__c</fullName>
    <description>Test DateTime field.</description>
    <label>DateTime</label>
    <type>DateTime</type>
</CustomField>