metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Email__c.field-meta.xml
<CustomField>
    <fullName>workspan__Email__c</fullName>
    <description>Test Email field.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>