metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Geo__c.field-meta.xml
<CustomField>
    <fullName>workspan__Geo__c</fullName>
    <description>Test Geo field.</description>
    <label>Geo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>