metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Integer__c.field-meta.xml
<CustomField>
    <fullName>workspan__Integer__c</fullName>
    <description>Test integer field.</description>
    <label>Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>