metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__LongText__c.field-meta.xml
<CustomField>
    <fullName>workspan__LongText__c</fullName>
    <description>Test Long Text field.</description>
    <label>Long Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>