metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Lookup__c.field-meta.xml
<CustomField>
    <fullName>workspan__Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup</label>
    <referenceTo>workspan__AqTestObject__c</referenceTo>
    <relationshipLabel>Aquiva Test Objects</relationshipLabel>
    <relationshipName>AquivaTestObjects</relationshipName>
    <type>Lookup</type>
</CustomField>