metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__MultiPicklist__c.field-meta.xml
<CustomField>
    <fullName>workspan__MultiPicklist__c</fullName>
    <description>Test multi-select picklist.</description>
    <label>Multi Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value One</fullName>
            </value>
            <value>
                <fullName>Value Two</fullName>
            </value>
            <value>
                <fullName>Value Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>