metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Percent__c.field-meta.xml
<CustomField>
    <fullName>workspan__Percent__c</fullName>
    <description>Test Percent field.</description>
    <label>Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>