metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Phone__c.field-meta.xml
<CustomField>
    <fullName>workspan__Phone__c</fullName>
    <description>Test Phone field.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>