metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Picklist__c.field-meta.xml
<CustomField>
    <fullName>workspan__Picklist__c</fullName>
    <description>Test Picklist field.</description>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value One</fullName>
            </value>
            <value>
                <fullName>Value Two</fullName>
            </value>
            <value>
                <fullName>Value Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>