metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__RequiredText__c.field-meta.xml
<CustomField>
    <fullName>workspan__RequiredText__c</fullName>
    <description>Text field that&apos;s required.</description>
    <inlineHelpText>Text field that&apos;s required.</inlineHelpText>
    <label>Required Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>