metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__RichText__c.field-meta.xml
<CustomField>
    <fullName>workspan__RichText__c</fullName>
    <description>Test RichText field.</description>
    <label>RichText</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>