metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Text__c.field-meta.xml
<CustomField>
    <fullName>workspan__Text__c</fullName>
    <description>Test Text field.</description>
    <label>Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>