metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__TextArea__c.field-meta.xml
<CustomField>
    <fullName>workspan__TextArea__c</fullName>
    <description>Text TextArea field.</description>
    <label>TextArea</label>
    <type>TextArea</type>
</CustomField>