metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/fields/workspan__Url__c.field-meta.xml
<CustomField>
    <fullName>workspan__Url__c</fullName>
    <description>Test URL field.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>