metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/recordTypes/workspan__RecordType1.recordType-meta.xml
<RecordType>
    <fullName>workspan__RecordType1</fullName>
    <active>true</active>
    <description>Test record type 1</description>
    <label>Record Type 1</label>
</RecordType>