metadata/sf-prod/force-app/main/default/objects/workspan__AqTestObject__c/recordTypes/workspan__RecordType2.recordType-meta.xml
<RecordType>
    <fullName>workspan__RecordType2</fullName>
    <active>true</active>
    <description>Test record type 2.</description>
    <label>Record Type 2</label>
</RecordType>